--- a/po/fi/ktouchpadenabler.po
+++ b/po/fi/ktouchpadenabler.po
@@ -1,36 +1,37 @@
-# Irish translation of ktouchpadenabler
-# Copyright (C) 2011 This_file_is_part_of_KDE
-# This file is distributed under the same license as the ktouchpadenabler package.
-# Kevin Scannell <kscanne@gmail.com>, 2011.
+# KDE 4.9 Finnish translation sprint 2012-06/07
+# Author: Artnay
 msgid ""
 msgstr ""
 "Project-Id-Version: ktouchpadenabler\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2012-08-19 02:45+0200\n"
-"PO-Revision-Date: 2011-12-28 12:28-0500\n"
-"Last-Translator: Kevin Scannell <kscanne@gmail.com>\n"
-"Language-Team: Irish <gaeilge-gnulinux@lists.sourceforge.net>\n"
-"Language: \n"
+"PO-Revision-Date: 2012-07-04 13:35:52+0000\n"
+"Last-Translator: Ei tietoa\n"
+"Language-Team: Finnish <lokalisointi@lists.coss.fi>\n"
+"Language: fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=5; plural=n==1 ? 0 : n==2 ? 1 : n<7 ? 2 : n < 11 ? "
-"3 : 4\n"
+"X-POT-Import-Date: 2012-06-15 06:58:29+0000\n"
+"X-Generator: MediaWiki 1.20alpha (r113129); Translate 2012-07-04\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ktouchpadenabler_daemon.cpp:128 ktouchpadenabler_daemon.cpp:161
 msgid "Touchpad status"
-msgstr ""
+msgstr "Kosketuslevyn tila"
 
 #: ktouchpadenabler_daemon.cpp:128
 msgid ""
 "More than one touchpad detected. Touchpad Enabler Daemon does not handle "
 "this configuration"
 msgstr ""
+"Järjestelmä on havainnut useamman kuin yhden kosketuslevyn. Kosketuslevyn "
+"käyttöönottopalvelu ei tue tätä laitekokoonpanoa"
 
 #: ktouchpadenabler_daemon.cpp:161
 msgid "Touchpad enabled"
-msgstr ""
+msgstr "Kosketuslevy käytössä"
 
 #: ktouchpadenabler_daemon.cpp:161
 msgid "Touchpad disabled"
-msgstr ""
+msgstr "Kosketuslevy pois käytöstä"
