--- a/po/fr/ktouchpadenabler.po
+++ b/po/fr/ktouchpadenabler.po
@@ -1,38 +1,39 @@
+# translation of ktouchpadenabler.po to Français
 # Copyright (C) YEAR This_file_is_part_of_KDE
 # This file is distributed under the same license as the PACKAGE package.
 #
-# Stefan Asserhall <stefan.asserhall@comhem.se>, 2012.
+# Joëlle Cornavin <jcorn@free.fr>, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
+"Project-Id-Version: ktouchpadenabler\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2012-08-19 02:45+0200\n"
-"PO-Revision-Date: 2012-02-22 22:29+0100\n"
-"Last-Translator: Stefan Asserhäll <stefan.asserhall@comhem.se>\n"
-"Language-Team: Swedish <kde-i18n-doc@kde.org>\n"
-"Language: sv\n"
+"PO-Revision-Date: 2012-07-10 10:19+0200\n"
+"Last-Translator: Joëlle Cornavin <jcorn@free.fr>\n"
+"Language-Team: French <kde-francophone@kde.org>\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Lokalize 1.2\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Lokalize 1.4\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: ktouchpadenabler_daemon.cpp:128 ktouchpadenabler_daemon.cpp:161
 msgid "Touchpad status"
-msgstr "Tryckplattans status"
+msgstr "État du pavé tactile"
 
 #: ktouchpadenabler_daemon.cpp:128
 msgid ""
 "More than one touchpad detected. Touchpad Enabler Daemon does not handle "
 "this configuration"
 msgstr ""
-"Hittade mer än en tryckplatta. Demonen för aktivering av tryckplatta "
-"hanterar inte denna konfiguration."
+"Plus d'un pavé tactile a été détecté. Le démon d'activation du pavé tactile "
+"ne gère pas cette configuration"
 
 #: ktouchpadenabler_daemon.cpp:161
 msgid "Touchpad enabled"
-msgstr "Tryckplatta aktiverad"
+msgstr "Pavé tactile activé"
 
 #: ktouchpadenabler_daemon.cpp:161
 msgid "Touchpad disabled"
-msgstr "Tryckplatta avstängd"
+msgstr "Pavé tactile désactivé"
