--- a/po/km/ktouchpadenabler.po
+++ b/po/km/ktouchpadenabler.po
@@ -1,36 +1,39 @@
+# translation of ktouchpadenabler.po to Khmer
 # Copyright (C) YEAR This_file_is_part_of_KDE
 # This file is distributed under the same license as the PACKAGE package.
 #
-# Franklin Weng <franklin@mail.everfocus.com.tw>, 2012.
+# Khoem Sokhem <khoemsokhem@khmeros.info>, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
+"Project-Id-Version: ktouchpadenabler\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2012-08-19 02:45+0200\n"
-"PO-Revision-Date: 2012-02-23 08:09+0800\n"
-"Last-Translator: Franklin Weng <franklin@mail.everfocus.com.tw>\n"
-"Language-Team: Chinese Traditional <zh-l10n@linux.org.tw>\n"
+"PO-Revision-Date: 2012-06-11 11:32+0700\n"
+"Last-Translator: Khoem Sokhem <khoemsokhem@khmeros.info>\n"
+"Language-Team: Khmer\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Lokalize 1.2\n"
+"X-Generator: KBabel 1.11.4\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
 #: ktouchpadenabler_daemon.cpp:128 ktouchpadenabler_daemon.cpp:161
 msgid "Touchpad status"
-msgstr "觸控板狀態"
+msgstr "ស្ថានភាព Touchpad"
 
 #: ktouchpadenabler_daemon.cpp:128
 msgid ""
 "More than one touchpad detected. Touchpad Enabler Daemon does not handle "
 "this configuration"
-msgstr "偵測一個以上的觸控板。觸控板開啟伺服程式無法處理這種設定。"
+msgstr ""
+"មាន​ច្រើន​ទៀត​ដែល touchpad បាន​រកឃើញ ។ ដេមិន​កម្មវិធី​បើក Touchpad មិន​គ្រប់គ្រង​ការ​កំណត់​"
+"រចនាសម្ព័ន្ធ​នេះ​ទេ"
 
 #: ktouchpadenabler_daemon.cpp:161
 msgid "Touchpad enabled"
-msgstr "觸控板已開啟"
+msgstr "បាន​បើក Touchpad"
 
 #: ktouchpadenabler_daemon.cpp:161
 msgid "Touchpad disabled"
-msgstr "觸控板已關閉"
+msgstr "បាន​បិទ Touchpad"
