--- a/po/lt/ktouchpadenabler.po
+++ b/po/lt/ktouchpadenabler.po
@@ -1,37 +1,39 @@
 # Lithuanian translations for l package.
 # Copyright (C) 2012 This_file_is_part_of_KDE
 # This file is distributed under the same license as the l package.
-# Automatically generated, 2012.
 #
+# Automatically generated, 2012.
+# Liudas Ališauskas <liudas.alisauskas@gmail.com>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: l 10n\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2012-02-22 02:56+0100\n"
-"PO-Revision-Date: 2011-12-29 05:41+0100\n"
-"Last-Translator: Automatically generated\n"
-"Language-Team: none\n"
-"Language: \n"
+"POT-Creation-Date: 2012-08-19 02:45+0200\n"
+"PO-Revision-Date: 2012-08-05 16:50+0300\n"
+"Last-Translator: Liudas Ališauskas <liudas.alisauskas@gmail.com>\n"
+"Language-Team: Lithuanian <kde-i18n-lt@kde.org>\n"
+"Language: lt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=4; plural=(n==1 ? 0 : n%10>=2 && (n%100<10 || n"
 "%100>=20) ? 1 : n%10==0 || (n%100>10 && n%100<20) ? 2 : 3);\n"
+"X-Generator: Lokalize 1.5\n"
 
-#: ktouchpadenabler_daemon.cpp:115 ktouchpadenabler_daemon.cpp:153
+#: ktouchpadenabler_daemon.cpp:128 ktouchpadenabler_daemon.cpp:161
 msgid "Touchpad status"
-msgstr ""
+msgstr "Jutiklinio kilimėlio būsena"
 
-#: ktouchpadenabler_daemon.cpp:115
+#: ktouchpadenabler_daemon.cpp:128
 msgid ""
 "More than one touchpad detected. Touchpad Enabler Daemon does not handle "
 "this configuration"
 msgstr ""
 
-#: ktouchpadenabler_daemon.cpp:153
+#: ktouchpadenabler_daemon.cpp:161
 msgid "Touchpad enabled"
-msgstr ""
+msgstr "Jutiklinis kilimėlis įjungtas"
 
-#: ktouchpadenabler_daemon.cpp:153
+#: ktouchpadenabler_daemon.cpp:161
 msgid "Touchpad disabled"
-msgstr ""
+msgstr "Jutiklinis kilimėlis išjungtas"
