--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ktouchpadenabler (0.1.1-1) unstable; urgency=low
+
+  * Updated translations.
+
+ -- Daniel Skinner <daniel@dasa.cc>  Tue, 20 Nov 2012 09:09:31 -0600
+
 ktouchpadenabler (0.1.0-1) unstable; urgency=low
 
   * Initial release (Closes: #689080).
